--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,26 @@
 <resources>
     <string name="app_name">Dice-app</string>
-    <string name="login_errors_invalid">Invalid username and/or password.</string>
     <string name="all_username">Username</string>
     <string name="all_password">Password</string>
+    <string name="all_confirmPassword">Confirm password</string>
+    <string name="login_header">Welcome</string>
     <string name="login_login">Log In</string>
     <string name="login_create">Create Account</string>
     <string name="login_welcome">Welcome %s!</string>
-    <string name="register_submit">submit</string>
-    <string name="register_header">Create new account</string>
-    <string name="login_header">Welcome</string>
-    <string name="all_confirmPassword">Confirm password</string>
+    <string name="login_errors_invalid">Invalid username and/or password.</string>
+    <string name="login_errors_unknown">An unknown error occurred.</string>
+    <string name="registration_submit">submit</string>
+    <string name="registration_header">Create new account</string>
     <string name="registration_errors_username_size">Username must contain between 6 and 32 characters.</string>
     <string name="registration_errors_username_duplicate">Someone already has that username.</string>
-    <string name="registration_errors_password_size">Password must contain between 8 and 32 characters.</string>
+    <string name="registration_errors_password_size">Password must contain between 6 and 32 characters.</string>
     <string name="registration_errors_confirmPassword_diff">Password and Confirm password does not match.</string>
+    <string name="registration_errors_unknown">An unknown error occurred.</string>
     <string name="roomList_element_owner">Owner: %s</string>
     <string name="roomList_element_users">%s users</string>
+    <string name="room_errors_invalidPassword">Invalid password.</string>
+    <string name="room_errors_notFound">Room not found.</string>
+    <string name="room_errors_unknown">An unknown error occurred.</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
