--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="roomList_toolbar_refresh">Refresh</string>
     <string name="roomList_toolbar_search">Search</string>
     <string name="roomList_info_refreshed">Refreshed!</string>
+    <string name="room_element_userRolled">%s rolled</string>
     <string name="room_errors_invalidPassword">Invalid password.</string>
     <string name="room_errors_notFound">Room not found.</string>
     <string name="room_errors_unknown">An unknown error occurred.</string>
